==> shengqiujin333/paida_f103/examples/arm-cm/stm32f4_nucleo_paida/qv/bsp.c <==
#include "qpc.h"
#include "blinky.h"
#include "bsp.h"
#include "stm32f4xx_hal.h"
#include "stm32f4xx.h"  /* CMSIS-compliant header file for the MCU used */
#define LED_GPIO_PORT     GPIOA
#define LED3_PIN          GPIO_PIN_5

void USART2_IRQHandler(void) {
    if ((USART2->SR & USART_SR_RXNE) != 0) {
        uint32_t b = USART2->DR;
        QS_RX_PUT(b);
    }
    QV_ARM_ERRATUM_838869();
}

void USART2_IRQHandler(void) {}

void BSP_ledon(void) {
    HAL_GPIO_WritePin(LED_GPIO_PORT,LED3_PIN,GPIO_PIN_SET);
}

void BSP_ledoff(void) {
    HAL_GPIO_WritePin(LED_GPIO_PORT,LED3_PIN,GPIO_PIN_RESET);
}

uint8_t QS_onStartup(void const *arg) {
    static uint8_t qsBuf[2*1024]; /* buffer for QS-TX channel */
    static uint8_t qsRxBuf[100];  /* buffer for QS-RX channel */
    GPIO_InitTypeDef GPIO_struct;
    USART_InitTypeDef USART_struct;

    (void)arg; /* avoid the "unused parameter" compiler warning */
    QS_initBuf(qsBuf, sizeof(qsBuf));
    QS_rxInitBuf(qsRxBuf, sizeof(qsRxBuf));

    /* enable peripheral clock for USART2 */

    QS_tickPeriod_ = SystemCoreClock / BSP_TICKS_PER_SEC;
    QS_tickTime_ = QS_tickPeriod_; /* to start the timestamp at zero */

    return 1U; /* return success */
}
