==> tobbad/stm32f4disc_qpc_lcd/Src/bsp.c <==
#include <stdbool.h>
#include "main.h"
#include "qpc.h"
#include "bsp.h"
#include "../state_machine/AppSM.h"
#include "stm32f4xx.h"  /* CMSIS-compliant header file for the MCU used */
#include "stm32f4xx_ll_gpio.h"
#include "stm32f4xx_hal_rcc.h"
#include "stm32f4xx_ll_usart.h"

void USART2_IRQHandler(void) {
    if (LL_USART_IsActiveFlag_RXNE(USART2)) {
        uint32_t b = LL_USART_ReceiveData8(USART2);
        QS_RX_PUT(b);
    }
}

void USART2_IRQHandler(void) {
}

void BSP_ledOn(Ledsh_t ledNr) {
	if (ledNr==LEDSH_RED)
	{
		LL_GPIO_SetOutputPin(GPIOC, LDSH_Red_Pin);
	} else if (ledNr==LEDSH_GREEN)
	{
		LL_GPIO_SetOutputPin(GPIOC, LDSH_Green_Pin);
	}
}

void BSP_ledOff(Ledsh_t ledNr) {
	if (ledNr==LEDSH_RED)
	{
		LL_GPIO_ResetOutputPin(GPIOC, LDSH_Red_Pin);
	} else if (ledNr==LEDSH_GREEN)
	{
		LL_GPIO_ResetOutputPin(GPIOC, LDSH_Green_Pin);
	}
}

uint8_t QS_onStartup(void const *arg) {

    (void)arg; /* avoid the "unused parameter" compiler warning */
    QS_initBuf(qsBuf, sizeof(qsBuf));
    QS_rxInitBuf(qsRxBuf, sizeof(qsRxBuf));

    LL_USART_EnableIT_RXNE(USART2);

    QS_tickPeriod_ = SystemCoreClock / BSP_TICKS_PER_SEC;
    QS_tickTime_ = QS_tickPeriod_; /* to start the timestamp at zero */

    /* setup the QS filters... */
    QS_FILTER_ON(QS_SM_RECORDS); /* state machine records */
    QS_FILTER_ON(QS_AO_RECORDS); /* active object records */
    QS_FILTER_ON(QS_UA_RECORDS); /* all user records */

    return (uint8_t)1; /* return success */
}
